--- a/Project/97CAR-Android/bdd.html
+++ b/Project/97CAR-Android/bdd.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>CMS - M.L - Context</title>
+  <title>97CAR - M.L - Bdd</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -40,7 +40,6 @@
 
 <body class="service-details-page">
 
-
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
@@ -75,7 +74,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>DÉCOUVERTE DES CMS</h1>
+              <h1>97CAR ANDROID</h1>
 
             </div>
           </div>
@@ -85,7 +84,7 @@
         <div class="container">
           <ol>
             <li><a href="../../index.html">Accueil</a></li>
-            <li class="current">Présentation du Contexte</li>
+            <li class="current">Base de Données</li>
           </ol>
         </div>
       </nav>
@@ -100,12 +99,13 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <a href="context.html" class="active">Présentation du Contexte</a>
-
-
-              <a href="https://drive.google.com/drive/folders/1rXiZACtI-7qadteChRysdtShVotvnf7k?usp=drive_link"
+              <a href="context.html">Présentation du Contexte</a>
+              <a href="bdd.html" class="active">Base de Données</a>
+              <a href="gestion.html">Gestion de Projet </a>
+              <a href="description.html">Description du Projet</a>
+              <a href="https://drive.google.com/drive/folders/1HrRIyYcViirmG8gALrL6aYp5VqbufQHL?dmr=1&ec=wgc-drive-globalnav-goto"
                 target="_blank" target="_blank">Documentation</a>
-
+              <a href="https://github.com/lmoutanin/API-97CAR" target="_blank">GitHub</a>
             </div>
 
           </div>
@@ -114,49 +114,80 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
 
             <center>
-              <h2><strong>Contexte du projet</strong> </h2>
-            </center>
-            <br>
+              <h2> <strong> Base de données </strong></h2>
+            </center> <br>
+
 
             <p>
-              Dans le cadre de l’AP 1.3 , j’ai collaboré en équipe à la conception et à la réalisation d’un site web
-              destiné à représenter l’association Amicale du lycée.
-              Ce projet avait pour but de nous initier aux CMS (Systèmes de Gestion de Contenu) tout en développant nos
-              compétences en gestion de projet, communication, et administration système.
+              Lors de mon premier Project, j'ai conçu une modélisation de base de données pour le garage 97CAR, qui
+              servira de point de départ pour ce projet.
             </p><br>
 
-            <h4>Missions Principale :</h4>
+            <h3> Modèle Conceptuel : </h3> <br>
+
+            <center> <img src="../../assets/project/97car-symfony/ap_3.2_01.png" width="700" height="350"
+                class="glightbox preview-link" class="img-fluid services-img"></center>
+
+            <br>
+
+            <h3> Modèle Relationnel : </h3>
+            <br>
+            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145241.png" width="700"
+                height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+
+            <br>
+
+            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145549.png" width="700"
+                height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+
+            <br><br>
+
+            <center>
+              <h4><strong>Cette modélisation comprend les entités principales suivantes :</strong></h4>
+            </center>
+
+            <br>
+
+
+            <h4>Clients :</h4>
             <ul>
-              <li><i class="bi bi-arrow-right"></i> <span>Rechercher et comparer plusieurs CMS.</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Choisir une solution adaptée aux besoins de
-                  l’association.</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Installer et configurer le CMS sur une VM Debian (sous
-                  Hyper-V).</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Concevoir un site avec du contenu (pages, articles).</span>
-              </li>
-              <li><i class="bi bi-arrow-right"></i> <span>Rédiger les documentations technique et utilisateur.</span>
-              </li>
-
-
-
+              <li><i class="bi bi-arrow-right"></i> <span>Stocke les informations personnelles des clients, telles que
+                  le nom, l'adresse, le numéro de téléphone et l'email.</span></li>
             </ul> <br>
 
-            <h4>Environnement technique :</h4>
+            <h4>Véhicules :</h4>
             <ul>
-              <li><i class="bi bi-arrow-right"></i> <span>CMS : WordPress </span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Serveur : Debian (VM), avec Apache, MySQL et PHP (stack LAMP),
-                  accès via SSH et XRDP</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Partage de fichiers : Google Drive, NAS </span></li>
-
-              <li><i class="bi bi-arrow-right"></i> <span>Communication d’équipe : messagerie mail </span>
-              </li>
-           
-            </ul><br>
-
-           
+              <li><i class="bi bi-arrow-right"></i> <span>Contient les détails des véhicules entretenus, y compris la
+                  marque, le modèle, l'année, le numéro d'immatriculation et l'ID du propriétaire, établissant ainsi une
+                  relation avec l'entité Clients. </span></li>
+            </ul> <br>
 
 
+            <h4> Réparations :</h4>
+            <ul>
+              <li><i class="bi bi-arrow-right"></i> <span> Enregistre chaque intervention effectuée sur les véhicules,
+                  avec des informations telles que la date de la réparation, la description des travaux effectués, le
+                  coût associé et l'ID du véhicule concerné, créant une liaison avec l'entité Véhicules. </span></li>
+            </ul> <br>
 
+
+            <h4> Factures :</h4>
+            <ul>
+              <li><i class="bi bi-arrow-right"></i> <span>Gère les données relatives à la facturation des réparations,
+                  incluant le numéro de facture, la date d'émission, le montant total et l'ID du client, assurant une
+                  connexion avec l'entité Clients. </span></li>
+            </ul> <br>
+
+            <h4> Admin :</h4>
+            <ul>
+
+              <li><i class="bi bi-arrow-right"></i> <span>Stocke les informations des administrateurs, comme le
+                  nom
+                  d'utilisateur, le mot de passe et les rôles, afin de sécuriser et gérer l'accès à
+                  l'application.</span></li>
+            </ul> <br>
+            </span></li>
+            </ul> <br>
 
           </div>
 
