--- a/Project/97CAR-Android/context.html
+++ b/Project/97CAR-Android/context.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>CMS - M.L - Context</title>
+  <title>97CAR - M.L - Context</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -75,7 +75,7 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1>DÉCOUVERTE DES CMS</h1>
+              <h1>97CAR ANDROID</h1>
 
             </div>
           </div>
@@ -101,11 +101,12 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
               <a href="context.html" class="active">Présentation du Contexte</a>
-
-
-              <a href="https://drive.google.com/drive/folders/1rXiZACtI-7qadteChRysdtShVotvnf7k?usp=drive_link"
+              <a href="bdd.html">Base de Données</a>
+              <a href="gestion.html">Gestion de Projet </a>
+              <a href="description.html">Description du Projet</a>
+              <a href="https://drive.google.com/drive/folders/1HrRIyYcViirmG8gALrL6aYp5VqbufQHL?dmr=1&ec=wgc-drive-globalnav-goto"
                 target="_blank" target="_blank">Documentation</a>
-
+              <a href="https://github.com/lmoutanin/API-97CAR" target="_blank">GitHub</a>
             </div>
 
           </div>
@@ -116,45 +117,65 @@
             <center>
               <h2><strong>Contexte du projet</strong> </h2>
             </center>
+
+            <br>
+            <center> <img src="../../assets/project/97car-symfony/logo_97car.png" class="glightbox preview-link" alt=""
+                class="img-fluid services-img"></center>
             <br>
 
+
             <p>
-              Dans le cadre de l’AP 1.3 , j’ai collaboré en équipe à la conception et à la réalisation d’un site web
-              destiné à représenter l’association Amicale du lycée.
-              Ce projet avait pour but de nous initier aux CMS (Systèmes de Gestion de Contenu) tout en développant nos
-              compétences en gestion de projet, communication, et administration système.
+              Dans le cadre de mon stage en tant que développeur informatique au sein du garage automobile 97CAR (50
+              employés, situé à La Réunion), ma mission principale était de poursuivre le développement d'un système de
+              gestion simplifié mais efficace pour organiser les opérations commerciales quotidiennes.
+              Le garage, spécialisé dans la réparation de véhicules thermiques, électriques et hybrides, souhaitait
+              optimiser l’accès aux informations clients et facturation pour ses équipes commerciales.
+
+
             </p><br>
 
             <h4>Missions Principale :</h4>
             <ul>
-              <li><i class="bi bi-arrow-right"></i> <span>Rechercher et comparer plusieurs CMS.</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Choisir une solution adaptée aux besoins de
-                  l’association.</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Installer et configurer le CMS sur une VM Debian (sous
-                  Hyper-V).</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Concevoir un site avec du contenu (pages, articles).</span>
-              </li>
-              <li><i class="bi bi-arrow-right"></i> <span>Rédiger les documentations technique et utilisateur.</span>
-              </li>
+              <li><i class="bi bi-arrow-right"></i> <span>Développement mobile : Poursuite du développement de
+                  l’application Android CarSlim destinée aux commerciaux du garage.</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Fonctionnalités principales de l’application :</span></li>
+              <ul>
+                <li><i class="bi bi-arrow-right"></i> <span> Consultation de la liste des clients,</span>
 
+                </li>
+                <li><i class="bi bi-arrow-right"></i> <span> Visualisation des factures associées à chaque
+                    client,</span></li>
+                <li><i class="bi bi-arrow-right"></i> <span>Détail des informations de facturation. </span></li>
+              </ul>
+
+              <li><i class="bi bi-arrow-right"></i> <span>Connexion aux données :
+
+                </span></li>
+              <ul>
+                <li><i class="bi bi-arrow-right"></i> <span> Mise en place d’une communication entre l’application
+                    Android et la base de données via une API REST.</span>
+
+                </li>
+                <li><i class="bi bi-arrow-right"></i> <span> API développée en PHP avec le micro-framework Slim.</span>
+                </li>
+
+              </ul>
 
 
             </ul> <br>
 
             <h4>Environnement technique :</h4>
             <ul>
-              <li><i class="bi bi-arrow-right"></i> <span>CMS : WordPress </span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Serveur : Debian (VM), avec Apache, MySQL et PHP (stack LAMP),
-                  accès via SSH et XRDP</span></li>
-              <li><i class="bi bi-arrow-right"></i> <span>Partage de fichiers : Google Drive, NAS </span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Développement mobile : Android (Java/Kotlin selon les besoins
+                  du projet)</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Backend : PHP (Slim Framework)</span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Base de données : PostgreSQL
 
-              <li><i class="bi bi-arrow-right"></i> <span>Communication d’équipe : messagerie mail </span>
-              </li>
-           
+                </span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Architecture : API REST </span></li>
+              <li><i class="bi bi-arrow-right"></i> <span>Méthodologie : Approche agile pour les évolutions
+                  fonctionnelles</span></li>
             </ul><br>
-
-           
-
 
 
 
