--- a/Project/97CAR-Php/bdd.html
+++ b/Project/97CAR-Php/bdd.html
@@ -127,7 +127,7 @@
 
             <br>
 
-            <h3> Modèle Physique / Relationnel : </h3>
+            <h3> Modèle Relationnel : </h3>
             <br>
             <center> <img src="../../assets/project/97car-php/bdd2.png" width="700" height="250"
                 class="glightbox preview-link" class="img-fluid services-img"></center>
