--- a/Project/97CAR-Symfony/bdd.html
+++ b/Project/97CAR-Symfony/bdd.html
@@ -130,7 +130,7 @@
 
             <br>
 
-            <h3> Modèle Physique / Relationnel : </h3>
+            <h3> Modèle Relationnel : </h3>
             <br>
             <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145241.png" width="700"
                 height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
