--- a/Project/Lycee44/bdd.html
+++ b/Project/Lycee44/bdd.html
@@ -126,7 +126,7 @@
 
             <br>
 
-            <h3> Modèle Physique / Relationnel : </h3>
+            <h3> Modèle Relationnel : </h3>
             <br>
             <center> <img src="../../assets/project/lycee 44/bdd.png" width="700" height="200"
                 class="glightbox preview-link" class="img-fluid services-img"></center>
