--- a/parcour.html
+++ b/parcour.html
@@ -231,13 +231,13 @@
                         <img src="assets/img/certif/oepnclassroom.webp" width="90" height="40"
                           class="bi bi-patch-check-fill">
                       </div><br>
-                      <a href="service-details.html" class="stretched-link">
+                      <a href="assets/img/certif/CERTIF.png" class="stretched-link">
                         <h3> Docker</h3>
                       </a>
 
 
                       <strong class="dates">
-                        <p>Date : <span> 0.0.0.0 </span></p>
+                        <p>Date : <span> Avril 2025 </span></p>
                       </strong>
 
                     </div>
@@ -249,13 +249,13 @@
                         <img src="assets/img/certif/oepnclassroom.webp" width="90" height="40"
                           class="bi bi-patch-check-fill">
                       </div><br>
-                      <a href="service-details.html" class="stretched-link">
+                      <a href="assets/img/certif/CERTIF.png" class="stretched-link">
                         <h3>PHP et MySQL</h3>
                       </a>
 
 
                       <strong class="dates">
-                        <p>Date : <span> 0.0.0.0 </span></p>
+                        <p>Date : <span> Mars 2025 </span></p>
                       </strong>
 
                     </div>
@@ -267,12 +267,12 @@
                         <img src="assets/img/certif/oepnclassroom.webp" width="90" height="40"
                           class="bi bi-patch-check-fill">
                       </div><br>
-                      <a href="service-details.html" class="stretched-link">
+                      <a href="assets/img/certif/CERTIF.png" class="stretched-link">
                         <h3>Android</h3>
                       </a>
 
                       <strong class="dates">
-                        <p>Date : <span> 0.0.0.0 </span></p>
+                        <p>Date : <span> Mars 2025 </span></p>
                       </strong>
 
                     </div>
@@ -284,13 +284,13 @@
                         <img src="assets/img/certif/oepnclassroom.webp" width="90" height="40"
                           class="bi bi-patch-check-fill">
                       </div><br>
-                      <a href="service-details.html" class="stretched-link">
+                      <a href="assets/img/certif/CERTIF.png" class="stretched-link">
                         <h3>DevOps</h3>
                       </a>
 
 
                       <strong class="dates">
-                        <p>Date : <span> 0.0.0.0 </span></p>
+                        <p>Date : <span> Fevrier 2025 </span></p>
                       </strong>
 
                     </div>
@@ -302,13 +302,13 @@
                         <img src="assets/img/certif/oepnclassroom.webp" width="90" height="40"
                           class="bi bi-patch-check-fill">
                       </div><br>
-                      <a href="service-details.html" class="stretched-link">
+                      <a href="assets/img/certif/CERTIF.png" class="stretched-link">
                         <h3>Git et GitHub</h3>
                       </a>
 
 
                       <strong class="dates">
-                        <p>Date : <span> 0.0.0.0 </span></p>
+                        <p>Date : <span> Fevrier 2025 </span></p>
                       </strong>
 
                     </div>
@@ -327,7 +327,7 @@
                       </a>
 
                       <strong class="dates">
-                        <p>Date : <span> 01.12.2024</span></p>
+                        <p>Date : <span> Decembre 2024</span></p>
                       </strong>
 
                     </div>
@@ -346,7 +346,7 @@
                       </a>
 
                       <strong class="dates">
-                        <p>Date : <span> 10.10.2024 </span></p>
+                        <p>Date : <span> Octobre 2024 </span></p>
                       </strong>
 
                     </div>
@@ -364,7 +364,7 @@
                       </a>
 
                       <strong class="dates">
-                        <p>Date : <span>09.09.2021 </span></p>
+                        <p>Date : <span>Septembre 2021 </span></p>
                       </strong>
 
                     </div>
