--- a/profil.html
+++ b/profil.html
@@ -543,7 +543,8 @@
                           <div class="col-lg-5 col-md-4" data-aos="fade-up" data-aos-delay="200">
                             <div class="features-item">
                               <i class="bi bi-book" style="color: #5578ff;"></i>
-                              <h3><a href="" class="stretched-link">Tableau de Synthèse</a></h3>
+                              <h3><a href="assets/cv/tableau_de_synthese_moutanin_luc.pdf"
+                                  class="stretched-link">Tableau de Synthèse</a></h3>
                             </div>
                           </div><!-- End Feature Item -->
 
