--- a/Project/97CAR-Symfony/bdd.html
+++ b/Project/97CAR-Symfony/bdd.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>97CAR - M.L - Bdd</title>
+  <title>97CAR-Symfony - M.L - Bdd</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
