--- a/Project/Lycee44/description.html
+++ b/Project/Lycee44/description.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>97CAR - M.L - Description</title>
+    <title>Lycee-44 M.L - Description</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
 
