--- a/veille.html
+++ b/veille.html
@@ -163,13 +163,13 @@
 
                 <p class="fst-italic py-3">Dans le cadre de ma veille technologique, j'ai choisi de m'intéresser à
                     Nvidia. Ma thématique est la
-                    suivante : NVIDIA acteur majeur de l’Intelligence Artificielle et du Deep Learning aujourd’hui
+                    suivante : NVIDIA, acteur clé de l’IA et du Deep Learning.
                     Afin de répondre a cette thématique ma veille se repose sur 2 différents thémes :</p>
             </div>
 
 
             <center>
-                <h3><strong>Théme 1 : Les innovations technologiques de NVIDIA dans l'IA et le Deep Learning</strong>
+                <h3><strong>Théme 1 : Innovations IA et Deep Learning de NVIDIA</strong>
                 </h3>
             </center>
 
@@ -253,7 +253,7 @@
 
 
             <center>
-                <h3><strong>Théme 2 : L’écosystème IA de NVIDIA et ses applications concrètes</strong>
+                <h3><strong>Théme 2 : Écosystème IA de NVIDIA et ses applications</strong>
                 </h3>
             </center>
 
